# CAENDigitizer

./: .gitignore  CMakeLists.txt  Makefile  PHA  PHA.cpp  README.md  TDPP.cpp  TDPP.hpp  TDigitizer.cpp  TDigitizer.hpp  TDigitizerCommand.cpp  TEveConverter.cpp  TTestDigi.cpp  TTestDigi.hpp  TUSBDigitizer.cpp  TUSBDigitizer.hpp  dpp.cpp  main.cpp  psd  sync  sync.cpp  test  test.cpp
DPPTest/: sample.xml
Demo/: index.html  nohup.out  source.root  test.xml
Demo/Components/: Makefile.Reader  SampleData.h  SampleDispatcher.h  SampleLogger.cpp  SampleLogger.h  SampleLoggerComp.cpp  SampleMonitor.cpp  SampleMonitorComp.cpp  SampleReader.cpp  SampleReader.h
Demo/Config/: UI.php
Demo/test/: GetDOM.php  test.php  test.xml
ELIADE/: test.xml
ELIADE/Components/: Makefile.Dispatcher  SampleData.h  SampleDispatcher.cpp  SampleDispatcher.h  SampleLogger.cpp  SampleMonitor.cpp  SampleMonitorComp.cpp  SampleReader.cpp  SampleReader.h
GANT/: eliade.xml  gant.xml
GANT/Components/: Makefile.Logger  SampleReader.cpp  SampleReader.h
GeDet/: Makefile  eliade.xml  test.xml
GeDet/Components/: Makefile  Makefile.Monitor  Makefile.Reader  SampleData.h  SampleDispatcher.cpp  SampleLogger.cpp  SampleLogger.h  SampleMonitor.cpp  SampleMonitor.h  SamplePHA.h  SamplePHAComp.cpp  SampleReader.cpp  SampleReader.h
GeDet/Config/: ParReader.php  UI.php  test.html  test.xml  write.php
PSD/: gant.xml  logger.xml
PSD/Components/: Makefile.Reader  SampleLogger.cpp  SampleMonitor.cpp  SampleReader.cpp  SampleReader.h
TwoSources/: monitor.xml  two.xml
TwoSources/Components/: Makefile  Makefile.PHA  Makefile.PSD  Makefile.Reader  SampleDispatcher.cpp  SampleDispatcher.h  SampleLogger.cpp  SampleMonitor.cpp  SampleMonitor.h  SampleMonitorComp.cpp  SamplePHA.cpp  SamplePHA.h  SamplePSD.cpp  SamplePSD.h  SamplePSDComp.cpp  SampleReader.cpp
UML/: Config.pu  Sequence.eps  Sequence.pu
WEBMonitor/: Makefile  tiny.xml
WEBMonitor/TinySink/: Makefile  SampleData.h  TinySink.cpp  TinySink.h  TinySinkComp.cpp
WEBMonitor/TinySource/: Makefile  TinySource.cpp  TinySource.h
include/: MyFunctions.hpp  TDPP.hpp  TDigiPHA.hpp  TDigiPar.hpp  TDigitizer.hpp  TDigitizerCommand.hpp  TEveConverter.hpp  TPHA.hpp  TPSD.hpp  TPSDPar.hpp  TParameters.hpp  TStdData.hpp  TWaveRecord.hpp  TWaveRecordData.hpp  TWaveRecordPar.hpp
src/: MyFunctions.cpp  TDPP.cpp  TDigiPHA.cpp  TDigiPar.cpp  TDigitizer.cpp  TPHA.cpp  TPSD.cpp  TWaveRecord.cpp
test/: sample.xml
test/Components/: Makefile.Dispatcher  Makefile.Logger  Makefile.Monitor  Makefile.Reader  SampleDispatcher.h  SampleLogger.cpp  SampleMonitor.cpp  SampleMonitor.h  SampleReader.cpp  SampleReader.h  TDigitizer.cpp  TDigitizer.hpp
test1/: gant.xml  sample.xml  test.xml
test1/Components/: Makefile  Makefile.Reader  SampleData.h  SampleDispatcher.cpp  SampleDispatcherComp.cpp  SampleLogger.cpp  SampleLogger.h  SampleLoggerComp.cpp  SampleMonitor.cpp  SampleMonitor.h  SampleReader.cpp  SampleReader.h
